# jellyfish-mcp

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE  PROMPTGUARD.md  README.md  SECURITY.md  main.py  manifest.json  mcp-jf.py  package-lock.json  package.json  pyproject.toml  server.py
.github/workflows/: bump-version.yml  check-bump-label.yml  check-version-bump.yml  endor.yml  publish.yml  secrets.yml  static-analysis.yml
extension/: README.md  manifest.json  package.json
extension/server/: api.js  index.js  sanitizer.js
server/: api.js  index.js  instructions.js  mcp_context.js  meta.js  process.js  sanitizer.js  tools.js
server/apps/: allocations_chart.js  team_picker.js  util.js
server/ui/: allocations-chart.html  team-picker-snippet.html
skills/jellyfish-custom-dashboards/: SKILL.md  dashboard-template.html  generate_dashboard.py
skills/jellyfish-custom-dashboards/reports/: engineering-investment.md
skills/jellyfish-custom-dashboards/templates/: base.html.j2  engineering-investment.html.j2
tests/: sample_prompts.js  test_prompt_guard_scores.js  test_server.js  test_server.py
