[project]
name = "jellyfish-mcp"
version = "0.1.1"
description = "Jellyfish MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "keyring>=25.6.0",
    "llamafirewall>=1.0.2"

]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "requests-mock"
]
